# bb_astromodels

./: .gitattributes  MANIFEST.in  README.md  README.txt  setup.cfg  setup.py
bb_astromodels/: __init__.py  _version.py
bb_astromodels/utils/: cache.py  data_files.py  numba_functions.py
bb_astromodels/xray/: absorption.py  interp.py  numba_sum.py
notebooks/: bb_astromodels_show.ipynb
