[metadata]
name = bb_astromodels
description = Some additional models for astromodels
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/BjoernBiltzinger/bb_astromodels
author_email = bbiltzing@mpe.mpg.de
author = Bjoern biltzinger
requires_python = >=3.7.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/BjoernBiltzinger/bb_astromodels/issues
    Source Code = https://github.com/BjoernBiltzinger/bb_astromodels


[options]
packages = find:
install_requires =
    numba
    numpy
    astropy
    astromodels


tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=bb_astromodels --cov-report=term -ra --ignore=bb_astromodels/test --ignore=bb_astromodels/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = bb_astromodels/test 
norecursedirs = bb_astromodels/test


[versioneer]
VCS=git
style=pep440
versionfile_source=bb_astromodels/_version.py
versionfile_build=bb_astromodels/_version.py
tag_prefix=v
parentdir_prefix=bb_astromodels-
